test/errors/classes/indexer_value_param_reserved_error.hy
// EXPECT_OUTPUT: Indexer parameter name 'value' is reserved
class BadIndexer
{
    int this[int value]
    {
        get value
        set value
    }

    BadIndexer()
    {
    }
}
